start range + config on api + seperate controllers + improved telemetry
