# PacketProcessing/src/DTOs/Conf/CameraConfDto.cs
@@ -1,0 +1,7 @@
+namespace PacketProcessing.DTOs.Conf;
+
+public class CameraConfDto
+{
+    public string Alias { get; set; } = string.Empty;
+    public bool IsRecording { get; set; } = false;
+}
