# PacketProcessing/src/DTOs/Conf/EndpointSpecification.cs
@@ -1,0 +1,3 @@
+namespace PacketProcessing.DTOs.Conf;
+
+public record struct EndpointSpecification(string? IP = null, int? Port = null);
